--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "llm-tools-clojure"
-version = "0.0.2a"
+version = "0.0.2b"
 description = "Talk to clojure nrepl as an LLM tool"
 readme = "README.md"
 authors = [{name = "Kawpuh"}]
